--- a/logstash.conf
+++ b/logstash.conf
@@ -9,6 +9,15 @@ input {
     file_completed_action => "log" 
     file_completed_log_path => "/usr/share/logstash/ingest_data/logstash_completed.log"
   }
+
+  rabbitmq {
+    host => "localhost"
+    queue => "tu_queue"
+    user => "usuario"
+    password => "contraseña"
+    codec => "json"
+  }
+
 }
 
 filter {
