--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ volumes:
     driver: local
   logstashdata01:
     driver: local
+  heartbeatdata01:
+    driver: local
 
 networks:
   default:
@@ -216,5 +218,27 @@ services:
     environment:
       - xpack.monitoring.enabled=false
       - ELASTIC_USER=elastic
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - ELASTIC_HOSTS=https://es01:9200
+
+
+  heartbeat01:
+    depends_on:
+      es01:
+        condition: service_healthy
+      kibana:
+        condition: service_healthy
+    image: docker.elastic.co/beats/heartbeat:${STACK_VERSION}
+    labels:
+      co.elastic.logs/module: heartbeat
+    user: root
+    volumes:
+      - certs:/usr/share/heartbeat/certs
+      - heartbeatdata01:/usr/share/heartbeat/data
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "./heartbeat.yml:/usr/share/heartbeat/heartbeat.yml:ro"
+    environment:
+      - xpack.monitoring.enabled=false
+      - ELASTIC_USER=${ELASTIC_USER}
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTIC_HOSTS=https://es01:9200
