Ingest all docker logs
Currently using plain, rather than docker. This is a little sad but oh
well

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,7 +1,7 @@
 input {
-  tcp {
+  beats {
     port => 5044
-    codec => json
+    codec => plain
   }
 
   rabbitmq {
@@ -16,19 +16,21 @@ input {
       ack => true
       codec => plain # Don't try and parse as json
     }
-
 }
 
 filter {
-  xml {
-    source => "message"
-    target => "xml_data" # Upper field
-  }
+  if [source] == "rabbitmq" {
+      xml {
+        source => "message"
+        target => "xml_data" # Upper field
+      }
+    }
 }
 
 output {
 
-   stdout { codec => rubydebug } # Dump to stdout as well, just for debugging. Thanks!
+    # SUPER SPAMMY
+   # stdout { codec => rubydebug } # Dump to stdout as well, just for debugging. Thanks!
 
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
