--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,5 @@
 services:
+
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:9.0.0
     container_name: elasticsearch
@@ -10,8 +11,6 @@ services:
       - ES_JAVA_OPTS=-Xmx256m -Xms256m
       - discovery.type=single-node
       - xpack.ml.enabled=false
-    ports:
-      - '9200:9200'
     networks:
       - monitoring
 
@@ -20,7 +19,7 @@ services:
     container_name: kibana
     restart: always
     ports:
-      - '5601:5601'
+      - '30071:5601'
     environment:
       - ELASTICSEARCH_URL=http://elasticsearch:9200
     depends_on:
@@ -37,13 +36,25 @@ services:
     command: logstash -f /logstash_dir/pipeline/logstash.conf
     depends_on:
       - elasticsearch
-    ports:
-      - '5044:5044'
     environment:
       - LS_JAVA_OPTS=-Xmx256m -Xms256m
     networks:
       - monitoring
       - attendify_net
+
+  filebeat:
+    image: docker.elastic.co/beats/filebeat:9.0.0
+    container_name: filebeat
+    restart: always
+    user: root
+    volumes:
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./filebeat/conf.yml:/usr/share/filebeat/filebeat.yml:ro
+    depends_on:
+      - logstash
+    networks:
+      - monitoring
 
 networks:
   monitoring: {}
