Make sure to include metadata

--- a/filebeat/conf.yml
+++ b/filebeat/conf.yml
@@ -4,7 +4,16 @@ filebeat.inputs:
     id: container-logs
     prospector.scanner.symlinks: true
     parsers:
-      - container: ~
+      - container:
+          format: docker
+          cri: docker
+    processors:
+      - add_docker_metadata:
+          host: "unix:///var/run/docker.sock"
+          add_hostname: true
+          add_id: true
+          add_image: true
+          add_labels: "*"
     paths:
       - "/var/lib/docker/containers/*/*.log"
     scan_frequency: 10s
