Fix RabbitMQ data not being xml parsed

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -15,11 +15,12 @@ input {
       auto_delete => false
       ack => true
       codec => plain # Don't try and parse as json
+      tags => ["rabbitmq_data"]
     }
 }
 
 filter {
-  if [source] == "rabbitmq" {
+  if "rabbitmq_data" in [tags] {
       xml {
         source => "message"
         target => "xml_data" # Upper field
