--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -5,11 +5,11 @@ input {
   }
 
   rabbitmq {
-      host => "rabbitmq"
-      port => 5672
-      vhost => "attendify"
-      user => "attendify"
-      password => "uXe5u1oWkh32JyLA" # Sorry...
+      host => "${RABBITMQ_HOST}"
+      port => "${RABBITMQ_PORT}"
+      vhost => "${RABBITMQ_VHOST}"
+      user => "${RABBITMQ_USER}"
+      password => "${RABBITMQ_PASS}"
       queue => "monitoring.heartbeat"
       durable => true
       auto_delete => false
