--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -23,8 +23,16 @@ filter {
   if "rabbitmq_data" in [tags] {
       xml {
         source => "message"
-        target => "xml_data" # Upper field
+        target => "xml_data"
       }
+    }
+    mutate {
+      convert => { "[xml_data][timestamp]" => "integer" }
+    }
+
+    date {
+      match => ["[xml_data][timestamp]", "UNIX_MS"]
+      target => "@timestamp"  
     }
 }
 
