--- a/beats/filebeat/Dockerfile
+++ b/beats/filebeat/Dockerfile
@@ -1,2 +1,3 @@
 FROM docker.elastic.co/beats/filebeat:9.0.0
 COPY --chown=root:filebeat conf.yml /usr/share/filebeat/filebeat.yml
+RUN chmod go-w /usr/share/filebeat/filebeat.yml
