--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -46,5 +46,7 @@ output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
     index => "logs-%{+YYYY.MM.dd}"
+    user => 'elastic'
+    password => "${ELASTIC_PASSWORD}"
   }
 }
