Add log level to logs

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -2,6 +2,7 @@ input {
   beats {
     port => 5044
     codec => plain
+    tags => ["logs"]
   }
 
   rabbitmq {
@@ -34,6 +35,20 @@ filter {
         match => ["[xml_data][timestamp]", "UNIX_MS"]
         target => "@timestamp"  
       }
+    }
+
+    if "logs" in [tags] {
+        if [message] =~ /(?i)\b(INFO|INF|INFORMATION)\b/ {
+          mutate { add_field => { "log_level" => "INFO" } }
+        } else if [message] =~ /(?i)\b(DEBUG|DBG)\b/ {
+          mutate { add_field => { "log_level" => "DEBUG" } }
+        } else if [message] =~ /(?i)\b(WARN|WARNING)\b/ {
+          mutate { add_field => { "log_level" => "WARN" } }
+        } else if [message] =~ /(?i)\b(ERROR|ERR|FAIL)\b/ {
+          mutate { add_field => { "log_level" => "ERROR" } }
+        } else if [message] =~ /(?i)\b(FATAL|CRITICAL)\b/ {
+          mutate { add_field => { "log_level" => "FATAL" } }
+        }
     }
     
 }
