alert for controlroom 2.0

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,5 @@
 services:
 
-
-
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:9.0.0
     container_name: elasticsearch
@@ -92,41 +90,19 @@ services:
       - monitoring
       - attendify_net
 
-
-
   heartbeat-monitor:
-      build:
-        context: ./extensions/heartbeat
-        dockerfile: Dockerfile.heartbeat
-      depends_on:
-        - elasticsearch
-        - rabbitmq
-      volumes:
-        - ./extensions/heartbeat:/app
-      command: ["python", "/app/heartbeat_monitoring.py"]    
-      networks:
-      - monitoring
-      - attendify_net
-
-
-
-
-  rabbitmq:
-      image: rabbitmq:latest
-      container_name: some-rabbit
-      restart: always
-      environment:
-        RABBITMQ_DEFAULT_PASS: RABBITMQ_PASS
-        RABBITMQ_DEFAULT_USER: RABBITMQ_USER
-        RABBITMQ_DEFAULT_VHOST: RABBITMQ_VHOST
-      ports:
-        - "30000:15672"
-        - "30001:5672"
-      volumes:
-        - rabbitmq_data:/var/lib/rabbitmq
-#        - ./enabled_plugins:/etc/rabbitmq/enabled_plugins
-      networks:
-        - attendify_net      
+    image: ghcr.io/woutdepeuter/integration-project-groep2-mailing:latest
+#    build:
+#      context: ./extensions/heartbeat
+#      dockerfile: Dockerfile.heartbeat
+    depends_on:
+      - elasticsearch
+      - rabbitmq
+    volumes:
+      - ./extensions/heartbeat:/app
+    networks:
+    - monitoring
+    - attendify_net
 
 networks:
   monitoring: {}
@@ -136,9 +112,3 @@ networks:
 volumes:
   rabbitmq_data: {}
   elastic_data: {}
-
-
-
-
-
-
