--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -18,6 +18,20 @@ input {
       codec => plain # Don't try and parse as json
       tags => ["rabbitmq_data"]
     }
+
+    rabbitmq {
+          host => "${RABBITMQ_HOST}"
+          port => "${RABBITMQ_PORT}"
+          vhost => "${RABBITMQ_VHOST}"
+          user => "${RABBITMQ_USER}"
+          password => "${RABBITMQ_PASS}"
+          queue => "monitoring.log"
+          durable => true
+          auto_delete => false
+          ack => true
+          codec => plain # Don't try and parse as json
+          tags => ["rabbitmq_logs"]
+        }
 }
 
 filter {
@@ -58,10 +72,30 @@ output {
     # SUPER SPAMMY
    # stdout { codec => rubydebug } # Dump to stdout as well, just for debugging. Thanks!
 
-  elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    index => "logs-%{+YYYY.MM.dd}"
-    user => 'elastic'
-    password => "${ELASTIC_PASSWORD}"
-  }
+   if "logs" in [tags] {
+       elasticsearch {
+           hosts => ["http://elasticsearch:9200"]
+           index => "logs-%{+YYYY.MM.dd}"
+           user => 'elastic'
+           password => "${ELASTIC_PASSWORD}"
+         }
+   }
+
+   if "rabbitmq_data" in [tags] {
+       elasticsearch {
+           hosts => ["http://elasticsearch:9200"]
+           index => "heartbeat-%{+YYYY.MM.dd}"
+           user => 'elastic'
+           password => "${ELASTIC_PASSWORD}"
+         }
+   }
+
+   if "rabbitmq_logs" in [tags] {
+          elasticsearch {
+              hosts => ["http://elasticsearch:9200"]
+              index => "rabbitmq-msgs-%{+YYYY.MM.dd}"
+              user => 'elastic'
+              password => "${ELASTIC_PASSWORD}"
+            }
+      }
 }
