Copy over changes

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -84,7 +84,7 @@ output {
    if "rabbitmq_data" in [tags] {
        elasticsearch {
            hosts => ["http://elasticsearch:9200"]
-           index => "heartbeat-%{+YYYY.MM.dd}"
+           index => "heartbeat"
            user => 'elastic'
            password => "${ELASTIC_PASSWORD}"
          }
