--- a/compose.yaml
+++ b/compose.yaml
@@ -118,6 +118,15 @@ services:
     image: ghcr.io/woutdepeuter/integration-project-groep2-controlroom:latest
     depends_on:
       - elasticsearch
+    environment:
+      - "ELASTIC_URL=http://elasticsearch:9200"
+      - "INDEX_NAME=heartbeat"
+      - "RABBITMQ_HOST=${RABBITMQ_HOST}"
+      - "RABBITMQ_PORT=${RABBITMQ_PORT}"
+      - "RABBITMQ_VHOST=${RABBITMQ_VHOST}"
+      - "RABBITMQ_USER=${RABBITMQ_USER}"
+      - "RABBITMQ_PASS=${RABBITMQ_PASS}"
+      - "ELASTIC_PASSWORD=${ELASTIC_PASSWORD}"
     networks:
       - monitoring
       - attendify_net
