--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./extensions/heartbeat
-          file: ./Dockerfile
+          file: ./extensions/heartbeat/Dockerfile
           push: true
           tags: ghcr.io/woutdepeuter/integration-project-groep2-controlroom:latest
 
