--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,8 +51,6 @@ jobs:
           port: '60022'
           script: |
             cd ~/attendify/monitoring
-            git pull
-            docker compose pull
-            chown go-w ./beats/filebeat/conf.yml
-            chown go-w ./beats/metricbeat/conf.yml
-            docker compose up -d --build
+            curl -o /deploy.sh https://raw.githubusercontent.com/WoutDepeuter/Integration-project-groep2-controlroom/refs/heads/main/deploy.sh
+            chmod +x ./deploy.sh
+            ./deploy.sh
