Parse messages in monitoring.log as xml, and add level if missing

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -62,7 +62,36 @@ filter {
           mutate { add_field => { "log_level" => "ERROR" } }
         } else if [message] =~ /(?i)\b(FATAL|CRITICAL)\b/ {
           mutate { add_field => { "log_level" => "FATAL" } }
+        } else {
+          mutate { add_field => { "log_level" => "UNKNOWN" } }
         }
+    }
+
+    if "rabbitmq_logs" in [tags] {
+
+        xml {
+            source = "message"
+            target = "data"
+        }
+
+        if ![data][level] {
+            if [data][message] =~ /(?i)\b(INFO|INF|INFORMATION)\b/ {
+              mutate { add_field => { "data.level" => "INFO" } }
+            } else if [data][message] =~ /(?i)\b(DEBUG|DBG)\b/ {
+              mutate { add_field => { "data.level" => "DEBUG" } }
+            } else if [data][message] =~ /(?i)\b(WARN|WARNING)\b/ {
+              mutate { add_field => { "data.level" => "WARN" } }
+            } else if [data][message] =~ /(?i)\b(ERROR|ERR|FAIL)\b/ {
+              mutate { add_field => { "data.level" => "ERROR" } }
+            } else if [data][message] =~ /(?i)\b(FATAL|CRITICAL)\b/ {
+              mutate { add_field => { "data.level" => "FATAL" } }
+            } else {
+              mutate { add_field => { "data.level" => "UNKNOWN" } }
+            }
+        }
+
+
+
     }
     
 }
@@ -93,7 +122,7 @@ output {
    if "rabbitmq_logs" in [tags] {
           elasticsearch {
               hosts => ["http://elasticsearch:9200"]
-              index => "rabbitmq-msgs-%{+YYYY.MM.dd}"
+              index => "rabbitmq-logs-%{+YYYY.MM.dd}"
               user => 'elastic'
               password => "${ELASTIC_PASSWORD}"
             }
