--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -70,8 +70,8 @@ filter {
     if "rabbitmq_logs" in [tags] {
 
         xml {
-            source = "message"
-            target = "data"
+            source => "message"
+            target => "data"
         }
 
         if ![data][level] {
@@ -89,9 +89,6 @@ filter {
               mutate { add_field => { "data.level" => "UNKNOWN" } }
             }
         }
-
-
-
     }
     
 }
