Don't log anything as unknown, use info instead

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -63,7 +63,7 @@ filter {
         } else if [message] =~ /(?i)\b(FATAL|CRITICAL)\b/ {
           mutate { add_field => { "log_level" => "FATAL" } }
         } else {
-          mutate { add_field => { "log_level" => "UNKNOWN" } }
+          mutate { add_field => { "log_level" => "INFO" } }
         }
     }
 
@@ -86,7 +86,7 @@ filter {
             } else if [data][message] =~ /(?i)\b(FATAL|CRITICAL)\b/ {
               mutate { add_field => { "data.level" => "FATAL" } }
             } else {
-              mutate { add_field => { "data.level" => "UNKNOWN" } }
+              mutate { add_field => { "data.level" => "INFO" } }
             }
         }
     }
